[project]
name = "hw6-ml-dl-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pygments>=2.19.1",
    "scikit-learn>=1.6.1",
    "sqlite-utils>=3.38",
    "torch>=2.6.0",
]
